--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdn.bootcss.com/Chart.js/2.6.0/Chart.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <title>My Block</title>
 </head>
+
 <body>
-    my first block!
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-lg-6 ">
+                <div style="height: 200px;width:100%;" class="bg-success"></div>
+            </div>
+            <div class="col-xs-12 col-lg-6 ">
+                <div style="height: 200px;width:100%;" class="bg-info"></div>
+            </div>
+        </div>
+    </div>
+
+    <div>
+        <ul class="myul">
+            <li>my item 1</li>
+            <li>my item 1</li>
+            <li>my item 1</li>
+            <li>my item 1</li>
+            <li>my item 1</li>
+        </ul>
+        <ul>
+            <li>my item 1</li>
+            <li>my item 2</li>
+            <li>my item 3</li>
+            <li>my item 4</li>
+            <li>my item 5</li>
+        </ul>
+        <input type="text" name="" id="">
+        <input type="text">
+        <input type="submit" value="">
+        <input type="text" name="" id="">
+        <input type="submit" value="">
+        <input type="email" name="" id="">
+        <input type="button" value="">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi officia eaque, ipsa illo sequi perspiciatis
+        quis nihil dignissimos minus recusandae. Iure voluptate, necessitatibus dolorum laboriosam qui reprehenderit
+        optio maxime sapiente?
+
+
+
+    </div>
 </body>
+
 </html>
