--- a/splitPage/index.html
+++ b/splitPage/index.html
@@ -13,11 +13,11 @@
     <div class="container">
         <div class="split left">
             <h1>The Designer</h1>
-            <a href="#" class="button">Read More</a>
+            <a href="javascript:;" class="button">Read More</a>
         </div>
         <div class="split right">
             <h1>The Programmer</h1>
-            <a href="#" class="button">Read More</a>
+            <a href="javascript:;" class="button">Read More</a>
         </div>
     </div>
 
