--- a/Test/index.html
+++ b/Test/index.html
@@ -50,9 +50,8 @@
         quis nihil dignissimos minus recusandae. Iure voluptate, necessitatibus dolorum laboriosam qui reprehenderit
         optio maxime sapiente?
 
-
-
     </div>
+    <script src="./js.js"></script>
 </body>
 
 </html>
